@@ -31,6 +31,10 @@ PHP                                                                        NEWS
   . Fixed bug GH-10315 (FPM unknown child alert not valid). (Jakub Zelenka)
   . Fixed bug GH-10385 (FPM successful config test early exit). (nielsdos)
 
+- Intl:
+  . Fixed bug GH-10647 (Spoolchecker isSuspicious/areConfusable methods
+    error code's argument always returning NULL0. (Nathan Freeman)
+
 - JSON:
   . Fixed JSON scanner and parser generation build.
     (Daniel Black, Jakub Zelenka)
